Layout issues, but can't figure out why I can't go live

--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@ font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans 
 
 #app {
     color:rgb(0, 0, 40);
-    width: 40%;
-    margin-left: 30%;
-    margin-top: 1%;
+    width: 100vw;
+    height: 100vh;
+    margin-top: 5%;
     text-align: center;
 }
 
